--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2-binary = "^2.9.9"
 whitenoise = "^6.6.0"
 django-environ = "^0.11.2"
 shortuuid = "^1.0.11"
+drf-yasg = "^1.21.7"
 
 
 [tool.poetry.group.dev.dependencies]
